--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
 		"joi": "^17.8.3",
+		"moment": "^2.29.4",
 		"morgan": "^1.10.0",
 		"socket.io": "^4.6.1",
 		"validator": "^13.9.0",
