--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node server.js",
+		"start": "node app.js",
 		"dev": "NODE_ENV=development nodemon --trace-warnings app.js"
 	},
 	"author": "Igbasan Olasunkanmi",
